--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piracy For Everything</title>
     <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/PiracyForEverything/piracyforeveything.github.io/main/style.css">
     <link rel="shortcut icon" href="../Piracy Website/Images/undefined - Imgur(1).gif"
         type="gif">
     <link rel="stylesheet"
