--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
 </head>
 
 <body>
+    
+        <div class="overlay">
+        <div class="content">
+          <h1>DISCLAIMER</h1>
+          <p>A fair use is a legally permissible use that would otherwise be infringing.
+
+            I do not own any of the websites listed.
+            All of these links are referral links.
+            By clicking the "I understand" button, I confirm that I understand the consequences of using this website. </p>
+          <button id="close-overlay">I understand</button>
+        </div>
+      </div>
+    
     <header>
         <h1> <a href="http://"> Piracy For Everything</a></h1>
         <p>Piracy is our only option</p>
