--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Piracy For Everything</title>
     <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/Images/undefined - Imgur(1).gif"
+    <link rel="shortcut icon" href="Images/undefined - Imgur(1).gif"
         type="gif">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
