--- a/index.html
+++ b/index.html
@@ -823,6 +823,11 @@
         <hr style="width: 100%;">
     </div>
 
+    <footer>
+        <p><a href="https://github.com/PiracyForEverything/p4e">&copy; PiracyForEverything</a></p>
+        <p title="Author Name">Santhosh Kumar</p>
+    </footer>
+
     <button id="home-button" class="overflow-button">Home</button>
 
     <script>
