--- a/index.html
+++ b/index.html
@@ -485,9 +485,9 @@
                 <h4>Mobile Apps</h4>
                 <div style="display: flex; justify-content: center;">
                     <ul>
-                        <li><strong><a href="https://www.apkmirror.com/" target="_blank">APK Mirror</a></strong</li>
-                        <li><strong><a href="https://www.apkpure.com" target="_blank">APK Pure</a></strong</li>
-                        <li><strong><a href="https://apk-dl.com/" target="_blank">APK-DL</a></strong</li>
+                        <li><strong><a href="https://www.apkmirror.com/" target="_blank">APK Mirror</a></strong></li>
+                        <li><strong><a href="https://www.apkpure.com" target="_blank">APK Pure</a></strong></li>
+                        <li><strong><a href="https://apk-dl.com/" target="_blank">APK-DL</a></strong></li>
                         <li><a href="https://www.luckypatchers.com/" target="_blank">Lucky Patcher</a></li>
                         <li><a href="https://github.com/inorichi/tachiyomi" target="_blank">Tachiyomi</a></li>
                         <li><a href="https://play.google.com/store/apps/details?id=com.kevinforeman.nzb360" target="_blank">nzb360</a></li>
