--- a/index.html
+++ b/index.html
@@ -610,6 +610,9 @@
                 <h4>Streaming</h4>
                 <div style="display: flex; justify-content: center;">
                     <ul>
+                        <li><a href="https://isaimini.bio/" target="_blank">Isai MINI</a></li>
+                        <li><a href="https://tamilyogi.wiki/" target="_blank">TamilYogi</a></li>
+                        <li><a href="https://tamilblasters.tools/" target="_blank">TamilBlasters</a></li>
                         <li><a href="https://123chill.to/" target="_blank">123Movies</a></li>
                         <li><a href="https://bflix.gg/" target="_blank">BFlix</a></li>
                         <li><a href="https://bingewatch.to/" target="_blank">BingeWatch</a></li>
